# Sylphia-OS

./: .clang-format  .gitignore  LICENSE.md  Makefile  README.md  kernel.dump  make_nvme_vdisk.sh  nvme_disk.img  project.json  pyproject.toml  setup.sh
apps/_header/: syscall.hpp
apps/_link/: linker.ld  start.asm
apps/shell/: main.cpp
apps/stdio/: main.cpp
apps/test/: main.cpp  start.asm
bootloader/: main.c
build_scripts/: OVMF_VARS_TMP.fd  build_app.ps1  build_bootloader.ps1  build_kernel.ps1  diskpart_mount.txt  kernel_dump.sh  make_empty_nnvme_img.bat  run_installed.bat  run_qemu.bat  sync_usb_vhd.ps1  sync_usb_vhd.sh
devenv/: OVMF_VARS.fd
kernel/: Debug.cpp  Debug.hpp  Error.hpp  Makefile  apic.cpp  apic.hpp  asmfunc.asm  block_device.hpp  boot_info.hpp  console.cpp  console.hpp  cxx.cpp  cxx.hpp  elf.hpp  font.cpp  graphics.cpp  graphics.hpp  interrupt.cpp  interrupt.hpp  io.hpp  ioapic.cpp  ioapic.hpp  kernel.elf  kernel.ld  kernel_aarch64.ld  keyboard.cpp  keyboard.hpp  keyboard_layout.cpp  linker.ld  main.cpp  new.cpp  new.hpp  paging.cpp  paging.hpp  pic.cpp  pic.hpp  printk.cpp  printk.hpp  segmentation.cpp  segmentation.hpp  (+1 more)
kernel/arch/: inasm.hpp
kernel/fs/: gpt.cpp  gpt.hpp  installer.cpp  installer.hpp
kernel/graphic/: FontEngine.cpp  FontEngine.hpp  GraphicSystem.cpp  GraphicSystem.hpp
kernel/include/: bootinfo.h  font8x8.hpp  framebuffer.hpp
scripts/: build_system.py  build_tool.py  config.py  img.py  run.py
std/: algorithm.hpp  string.cpp  string.h  string.hpp  utility.hpp
uefi/: Makefile  run_qemu.sh  uefi.h
(+157 files in other folders)
