[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sylphia-build-tool"
version = "0.1.0"
dependencies = [
    "click",
    "colorama",
    "tqdm",
]

[project.scripts]
sylphia = "scripts.build_tool:main"

[tool.setuptools.packages.find]
include = ["scripts*"]